--- a/src/components/ui/links/MegaMenuLink.astro
+++ b/src/components/ui/links/MegaMenuLink.astro
@@ -15,7 +15,7 @@ import { servicesData, successStoriesData } from "@data/mega_link";
   </button>
 
   <div
-    class="hs-dropdown-menu hs-dropdown-open:opacity-100 start-0 top-full z-10 hidden w-full min-w-60 rounded-2xl bg-neutral-50 py-2 opacity-0 transition-[opacity,margin] duration-[0.1ms] before:absolute before:start-0 before:-top-5 before:h-5 before:w-full md:p-4 md:shadow-2xl md:duration-[150ms] dark:divide-neutral-700 dark:bg-neutral-800"
+    class="hs-dropdown-menu hs-dropdown-open:opacity-100 start-0 top-full z-[60] hidden w-full min-w-60 rounded-2xl bg-neutral-50 py-2 opacity-0 transition-[opacity,margin] duration-[0.1ms] before:absolute before:start-0 before:-top-5 before:h-5 before:w-full md:p-4 md:shadow-2xl md:duration-[150ms] dark:divide-neutral-700 dark:bg-neutral-800"
   >
     <div class="gap-4 md:grid md:grid-cols-2 lg:grid-cols-3">
       <div class="mx-1 flex flex-col md:mx-0">
