--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -64,7 +64,7 @@ interface Props {
     */
     }
     <div
-      class="mx-auto w-full max-w-(--breakpoint-2xl) flex-grow px-4 sm:px-6 lg:px-8"
+      class="xs:px-4 mx-auto w-full max-w-7xl flex-grow px-3 sm:px-6 md:px-8 lg:px-10 xl:px-12"
     >
       <Navbar />
       <main>
